--- a/html-css/exercicios/ex010/index.html
+++ b/html-css/exercicios/ex010/index.html
@@ -10,5 +10,9 @@
     <h1>Usando links externos</h1>
     <p>Você pode usar o meu <a href="https://github.com/KnoxVII" target="_blank" rel="external">repositório público no Github</a></p>
     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo" target="_blank" rel="external">canal gratuito no youtube</a></p>
+
+    <h2>Usando links internos</h2>
+    <p>Esta é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next">segunda pagina</a></p>
+    <p>Você também pode acessar a nossa <a href="noticias/pag003.html">página de notícias</a></p>
 </body>
 </html>
