--- a/html-css/exercicios/ex010/index.html
+++ b/html-css/exercicios/ex010/index.html
@@ -11,8 +11,17 @@
     <p>Você pode usar o meu <a href="https://github.com/KnoxVII" target="_blank" rel="external">repositório público no Github</a></p>
     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo" target="_blank" rel="external">canal gratuito no youtube</a></p>
 
-    <h2>Usando links internos</h2>
+    <h1>Usando links internos</h2>
     <p>Esta é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next">segunda pagina</a></p>
     <p>Você também pode acessar a nossa <a href="noticias/pag003.html">página de notícias</a></p>
+
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="livro/Servi et al. (2023a)_Final.pdf" type="application/pdf">Abrir o livro em PDF</a></li>
+
+        <li><a href="livro/Servi et al. (2023a)_Final.pdf" download="Servi et al. (2023a)_Final.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
+        
+        <li><a href="livro/Servi et al. (2023a)_Final.rar" download="Servi et al. (2023a)_Final.rar" type="application/zip">Baixar o livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
