exercicio 012 - hospedando videos localmente

--- a/html-css/exercicios/ex011/index.html
+++ b/html-css/exercicios/ex011/index.html
@@ -19,6 +19,7 @@
     <h1>Reproduzindo audio</h1>
     <p>Vamos aprender a reproduzir audios em HTML5</p>
 
-    <audio src="midia/2020 - Dyalla.mp3" controls autoplay </audio>
+    <audio src="midia/2020 - Dyalla.mp3" controls> </audio>
+
 </body>
 </html>
