--- a/html-css/exercicios/ex012/index.html
+++ b/html-css/exercicios/ex012/index.html
@@ -10,11 +10,15 @@
     <h1>Inserindo videos hospedados localmente</h1> 
     <p>Este video está hospedado no meu próprio servidor</p> 
 
-    <video  width="500" controls>
+    <video  width="560" controls autoplay loop>
         <source src="midia/video-pequeno.mp4" type="video/mp4">
         <source src="midia/video-pequeno.ogv" type="video/ogv">
         <source src="midia/video-medio.webm" type="video/webm">
         <p>Seu navegador não tem cinoatibilidade com reprodução de videos.</p>
     </video>
+
+    <h1>Inserindo videos externos</h1>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RHElv9Kk9gY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
