--- a/html-css/exercicios/ex017/fonte01.html
+++ b/html-css/exercicios/ex017/fonte01.html
@@ -7,8 +7,26 @@
     <title>Fontes no CSS</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Work Sans', Arial, Helvetica, sans-serif;
             font-size: 1em;
+            font-weight: normal;
+            font-style: normal;
+            text-decoration: none;
+        }
+
+        h1 {
+            /* 
+            font-family: 'Work Sans', sans-serif;
+            font-size: 3em;
+            font-style: italic;
+            font-weight: bolder; 
+            */
+
+            font: italic bolder 3em 'Work Sans', sans-serif;
+        }
+
+        h2 {
+            font: bold 2em 'Work Sans', sans-serif;
         }
     </style>
 </head>
