--- a/html-css/exercicios/ex017/fonte01.html
+++ b/html-css/exercicios/ex017/fonte01.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes no CSS</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap');
+
         body {
             font-family: 'Work Sans', Arial, Helvetica, sans-serif;
             font-size: 1em;
