--- a/html-css/exercicios/ex021/caixa-1.html
+++ b/html-css/exercicios/ex021/caixa-1.html
@@ -8,13 +8,32 @@
     <style>
         h1 {
             background-color: lightgray;
+            /* 
             border-width: 10px;
             border-style: solid;
-            border-color: black;
+            border-color: black; 
+            */
+            border: 10px solid black;
+            /* 
+            margin-top: 10px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            margin-left: 50px; 
+            */
+            margin: 10px auto 50px auto;
+            /* 
+            outline-width: 5px;
+            outline-style: dashed; 
+            outline-color: rgb(78, 153, 63);
+            */
+            outline: 5px dashed #4e993f;
+            /* 
             padding-top: 10px;
             padding-right: 10px;
             padding-bottom: 10px;
-            padding-left: 10px;
+            padding-left: 10px; 
+            */
+            padding: 10px;
             height: 300px;
             width: 300px;
         }
