--- a/html-css/exercicios/ex021/caixa02.html
+++ b/html-css/exercicios/ex021/caixa02.html
@@ -14,12 +14,14 @@
 
         header {
             background-color: white;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 10px;
             margin: 10px;
         }
 
         nav {
             background-color: #555555;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 3px;
         }
 
@@ -35,6 +37,7 @@
 
         main {
             background-color: white;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 10px;
             margin: 10px;
         }
@@ -46,14 +49,20 @@
 
         article > aside {
             background-color: #555555;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             color: white;
         }
 
         footer {
             background-color: white;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             margin: 0px;
-            padding: 2px;
+            padding: 5px;
             text-align: center;
+        }
+
+        footer > p {
+            margin: 0px;
         }
     </style>
 </head>
