--- a/html-css/exercicios/ex021/caixa02.html
+++ b/html-css/exercicios/ex021/caixa02.html
@@ -14,6 +14,7 @@
 
         header {
             background-color: white;
+            border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 10px;
             margin: 10px;
@@ -21,6 +22,7 @@
 
         nav {
             background-color: #555555;
+            border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 3px;
         }
@@ -37,6 +39,7 @@
 
         main {
             background-color: white;
+            border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
             padding: 10px;
             margin: 10px;
@@ -44,13 +47,20 @@
 
         article {
             background-color: lightgrey;
+            border-radius: 5px;
             padding: 5px;
         }
 
         article > aside {
             background-color: #555555;
+            border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.534);
+            padding: 5px 5px;
             color: white;
+        }
+
+        aside > p {
+            margin: 0px;
         }
 
         footer {
@@ -90,10 +100,6 @@
                 <aside>
                     <p>Artigo escrito por José da Silva</p>
                 </aside>
-            </article>
-
-            <article>
-
             </article>
         </section>
     </main>
