--- a/html-css/desafios/d010/android.html
+++ b/html-css/desafios/d010/android.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <title>Como surgiu o mascote do Android</title>
 </head>
 <body>
@@ -30,14 +31,20 @@
         <h2 class="titulo_android--secundario">A primeira versão</h2>
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-        <img src="imagens/dan-droids.png" alt="Imagem da primeira versão do mascote do Android.">
+        <picture>
+            <source media="(max-width: 750px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+            <img src="imagens/dan-droids.png" alt="Imagem da primeira versão do mascote do Android.">
+        </picture>
 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
 
         <h2 class="titulo_android--secundario">Surge um novo mascote</h2>
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-        <img src="imagens/irina-blok.jpg" alt="Foto da criadora do mascote.">
+        <picture>
+            <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+            <img src="imagens/irina-blok.jpg" alt="Foto da criadora do mascote.">
+        </picture>
 
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a href="#">Bugdroid</a>, o novo mascote do Android.</p>
 
