Background attachment e shorthand

--- a/html-css/exercicios/ex022/fundo006.html
+++ b/html-css/exercicios/ex022/fundo006.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 95vh;
+            /* background-attachment: fixed;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
-            background-size: cover;
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover; 
         }
 
         main {
@@ -21,14 +25,14 @@
             border-radius: 10px;
             margin: auto;
             padding: 10px;
-            width: 400px;
+            max-width: 400px;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloremque reiciendis ut totam aliquam. Perferendis mollitia quo eaque aperiam, odio sed, illo ducimus porro ullam totam sit excepturi quibusdam fugit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. At voluptate eius alias voluptatum maxime rerum fuga sunt placeat nisi accusamus iure, architecto ipsa possimus tempora inventore sed culpa officia itaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia maiores voluptatibus reprehenderit veritatis, ea voluptates eius, deserunt itaque quam aliquam ducimus pariatur corrupti laudantium tenetur sunt, iure aliquid maxime numquam?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi doloremque reiciendis ut totam aliquam. Perferendis mollitia quo eaque aperiam, odio sed, illo ducimus porro ullam totam sit excepturi quibusdam fugit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. At voluptate eius alias voluptatum maxime rerum fuga sunt placeat nisi accusamus iure, architecto ipsa possimus tempora inventore sed culpa officia itaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia maiores voluptatibus reprehenderit veritatis, ea voluptates eius, deserunt itaque quam aliquam ducimus pariatur corrupti laudantium tenetur sunt, iure aliquid maxime numquam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet omnis sequi iste veritatis magni provident sed, eaque ipsum ut nihil expedita, fugit eveniet accusantium, quam pariatur dolore iure accusamus eligendi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus doloribus magni amet totam, harum distinctio tempora perferendis beatae. Repudiandae ab esse deleniti soluta vero ipsam officiis. Ut earum commodi cum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, ex numquam, harum necessitatibus commodi iure voluptatem obcaecati ut quidem optio, ipsa aliquid voluptate sequi dicta nam sed cumque voluptatum deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto error libero eum expedita, beatae tempore iure eligendi eaque quisquam itaque, cumque dicta similique perferendis et rem adipisci at aliquam quo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus aut, animi error voluptatem est impedit ullam odio, reiciendis iste quisquam optio consequuntur nisi cum quaerat earum provident iusto asperiores repudiandae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptate non pariatur maiores? Fugiat dolorum quod, soluta dolorem omnis autem nobis nulla sapiente velit, distinctio sit officia perspiciatis labore rerum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel excepturi, ipsam laboriosam tenetur id accusamus. Tempora ea ipsam quo laboriosam commodi a et ipsa unde dolore, ratione vel quibusdam sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eius ad, consectetur iusto odio autem quis maiores natus deserunt eaque officiis nam id repudiandae perspiciatis inventore explicabo consequatur aut culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nostrum nam tempore voluptatem, necessitatibus laudantium! Perferendis voluptates, minima voluptatum pariatur ad veniam, id dignissimos doloribus magnam modi fuga laudantium voluptatibus! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum cumque dolores doloremque delectus consectetur molestiae error sit nulla pariatur dolor, iusto explicabo earum mollitia deleniti, odio blanditiis. Aperiam, tempora quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aspernatur fugiat nihil assumenda, hic amet mollitia in reprehenderit tenetur corrupti provident accusantium corporis animi, atque sed alias beatae facilis? Sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium doloremque, similique quis cupiditate recusandae dignissimos tempore sapiente maxime ab accusamus, consequuntur ea. Voluptas sapiente doloremque vel inventore nobis rerum labore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ad quibusdam ut officia corporis vel repellendus mollitia et, inventore vitae consectetur adipisci in molestias? Incidunt repudiandae mollitia eveniet ratione sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam minima asperiores, cum architecto minus alias repellendus fuga velit laudantium cupiditate placeat! Molestiae eos aperiam ipsam facere rem modi, nobis excepturi?</p>
     </main>
 </body>
 </html>
