--- a/html-css/exercicios/ex023/tabela001.html
+++ b/html-css/exercicios/ex023/tabela001.html
@@ -27,6 +27,7 @@
 
         td {
             border: 1px solid #1b1b1b;
+            text-align: center;
             padding: 8px;
         }
 
@@ -56,13 +57,13 @@
 
         <tr>
             <td>A3</td>
-            <td>B3</td>
+            <td class="dado">B3</td>
             <td>C3</td>
         </tr>
 
-        <tr>
+        <tr class="linha">
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
     </table>
