--- a/html-css/exercicios/ex023/tabela002.html
+++ b/html-css/exercicios/ex023/tabela002.html
@@ -15,6 +15,13 @@
             width: 500px;
         }
 
+        caption {
+            background-color: lightgray;
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+        }
+
         td, th {
             border: 1px solid black;
             padding: 10px;
@@ -35,8 +42,8 @@
         <caption>População das unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -179,7 +186,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="colgroup">Total de Habitantes</th>
                 <td class="num"><strong>215 774 031</strong></td>
             </tr>
         </tfoot>
