--- a/html-css/exercicios/ex023/tabela002.html
+++ b/html-css/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
 
         table{
             border-collapse: collapse;
+            position: relative;
             width: 500px;
         }
 
@@ -27,9 +28,19 @@
             padding: 10px;
         }
 
+        thead > tr > th {
+            background-color: #555555;
+            position: sticky;
+            top: -1px;
+        }
+
         thead, tfoot {
-            background-color: rgb(85, 85, 85);
+            background-color: #555555;
             color: white;
+        }
+
+        tbody tr:nth-child(2n) {
+            background-color: lightgray;
         }
 
         .num {
