--- a/html-css/exercicios/ex023/tabela003.html
+++ b/html-css/exercicios/ex023/tabela003.html
@@ -36,14 +36,16 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
-        </tr>
+        <thead>
+            <tr>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th scope="colgroup" colspan="3">Filmes</th>
+            </tr>
+        </thead>
 
         <tr>
-            <th rowspan="3">Mulheres</th>
+            <th scope="rowgroup" rowspan="3">Mulheres</th>
             <td>Ana Maria Santos</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -66,7 +68,7 @@
         </tr>
 
         <tr>
-            <th rowspan="3">Homens</td>
+            <th scope="rowgroup" rowspan="3">Homens</th>
             <td>Bruno Mendonça</td>
             <td>Intocáveis</td>
             <td>Amnésia</td>
