--- a/html-css/exercicios/ex024/iframe002.html
+++ b/html-css/exercicios/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe minima quas maiores ducimus nulla corrupti incidunt facere nesciunt. At atque eligendi magnam quam maiores officiis quasi modi officia illo quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sit, odit eveniet dolores voluptas incidunt delectus iure quo autem repudiandae eum laudantium cupiditate sint similique quia architecto odio consectetur tenetur?</p>
 
-    <iframe src="pagina001.html"frameborder="0" height="500px" width="500px"></iframe>
+    <iframe src="paginas-extra/pagina001.html"frameborder="0" height="500px" width="500px">
+        <p>Infelizmente seu navegador não é compatível!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis eos quis suscipit illo ullam hic necessitatibus ab adipisci, est, porro fuga. Recusandae nisi ipsum, officia accusantium illum provident perferendis incidunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque in dolorem impedit ad, sint molestias doloremque, tempora autem nobis, possimus minima voluptatem expedita commodi laboriosam. Ipsa unde assumenda cumque aliquid.</p>
 </body>
