Desafio 015 - Minha parte sem consulta

--- a/html-css/exercicios/ex024/iframe003.html
+++ b/html-css/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam nisi, hic alias ad vitae eaque quod voluptate debitis corrupti cumque. Repellat, earum doloremque! Eos ratione omnis ipsa? Iure, repellendus suscipit.</p>
 
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ad inventore doloremque quibusdam cumque harum vel voluptas repellat optio obcaecati distinctio vero voluptatibus, itaque iure hic eos facilis in. Architecto?</p>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>">
         <p>Infelizmente seu navegador não é compatível.</p>
     </iframe>
 
