Atualização do projeto

--- a/html-css/desafios/d015/index.html
+++ b/html-css/desafios/d015/index.html
@@ -10,24 +10,22 @@
 </head>
 <body>
     <main>
-        <img id="iphone" src="assets/imagens/frame-iphone.png" alt="iphone">
-        
-        <iframe id="tela" name="frame" src="assets/imagens/tela-home.jpg" frameborder="0" scrolling="auto"></iframe>
+        <section id="iphone">           
+            <iframe id="tela" name="frame" src="assets/imagens/tela-home.jpg" frameborder="0" scrolling="auto"></iframe>
+        </section>
 
 
-        <div class="logos-container">
-            <a href="#"><img class="logos" src="assets/imagens/logo-home.jpg" alt=""></a>
-
-            <a href="https://www.youtube.com/channel/UCGe5X0dwW51HprCWRzbJ3xA" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="Botão com o logo do youtube"></a>
-
-            <a href="https://github.com/KnoxVII" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Botão com o logo do Github"></a>
-
-            <a href="https://www.instagram.com/knox_project/?theme=dark" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Botão com o jogo do Instagram"></a>
+        <section id="redes-sociais">
+            <div class="logos-container">
+                <a href="#"><img class="logos" src="assets/imagens/logo-home.jpg" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCGe5X0dwW51HprCWRzbJ3xA" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="Botão com o logo do youtube"></a>
+                <a href="https://github.com/KnoxVII" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Botão com o logo do Github"></a>
+                <a href="https://www.instagram.com/knox_project/?theme=dark" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Botão com o jogo do Instagram"></a>
             
-            <a href="https://twitter.com/KnoxVIIXV" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Botão com o logo do Twitter"></a>
-
-            <a href="https://www.facebook.com/KnoxVIIXV/" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt=""></a>
-        </div>
+                <a href="https://twitter.com/KnoxVIIXV" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Botão com o logo do Twitter"></a>
+                <a href="https://www.facebook.com/KnoxVIIXV/" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt=""></a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
