--- a/html-css/desafios/d015/index.html
+++ b/html-css/desafios/d015/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="iphone">           
-            <iframe id="tela" name="frame" src="assets/imagens/tela-home.jpg" frameborder="0" scrolling="auto"></iframe>
+            <iframe id="tela" name="frame" src="home.html" frameborder="0" scrolling="auto"></iframe>
         </section>
 
 
