--- a/html-css/desafios/d015/index.html
+++ b/html-css/desafios/d015/index.html
@@ -11,19 +11,25 @@
 <body>
     <main>
         <section id="iphone">           
-            <iframe id="tela" name="frame" src="home.html" frameborder="0" scrolling="auto"></iframe>
+            <iframe id="tela" name="frame" src="home.html" frameborder="0" scrolling="auto">
+                Seu navegador não é compativel.
+            </iframe>
         </section>
 
 
         <section id="redes-sociais">
             <div class="logos-container">
-                <a href="#"><img class="logos" src="assets/imagens/logo-home.jpg" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCGe5X0dwW51HprCWRzbJ3xA" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="Botão com o logo do youtube"></a>
-                <a href="https://github.com/KnoxVII" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Botão com o logo do Github"></a>
-                <a href="https://www.instagram.com/knox_project/?theme=dark" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Botão com o jogo do Instagram"></a>
+                <a href="#"><img class="logos" src="assets/imagens/logo-home.jpg" alt="Home"></a>
+
+                <a href="https://www.youtube.com/channel/UCGe5X0dwW51HprCWRzbJ3xA" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="youtube"></a>
+
+                <a href="https://github.com/KnoxVII" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Github"></a>
+
+                <a href="https://www.instagram.com/knox_project/?theme=dark" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Instagram"></a>
             
-                <a href="https://twitter.com/KnoxVIIXV" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Botão com o logo do Twitter"></a>
-                <a href="https://www.facebook.com/KnoxVIIXV/" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt=""></a>
+                <a href="https://twitter.com/KnoxVIIXV" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Twitter"></a>
+
+                <a href="https://www.facebook.com/KnoxVIIXV/" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt="Facebook"></a>
             </div>
         </section>
     </main>
