--- a/html-css/desafios/d015/index.html
+++ b/html-css/desafios/d015/index.html
@@ -19,17 +19,17 @@
 
         <section id="redes-sociais">
             <div class="logos-container">
-                <a href="#"><img class="logos" src="assets/imagens/logo-home.jpg" alt="Home"></a>
+                <a href="home.html" target="frame"><img class="logos" src="assets/imagens/logo-home.jpg" alt="Home"></a>
 
-                <a href="https://www.youtube.com/channel/UCGe5X0dwW51HprCWRzbJ3xA" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="youtube"></a>
+                <a href="youtube.html" target="frame"><img class="logos" src="assets/imagens/logo-youtube.jpg" alt="youtube"></a>
 
-                <a href="https://github.com/KnoxVII" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Github"></a>
+                <a href="github.html" target="frame"><img class="logos" src="assets/imagens/logo-github.jpg" alt="Github"></a>
 
-                <a href="https://www.instagram.com/knox_project/?theme=dark" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Instagram"></a>
+                <a href="instagram.html" target="frame"><img class="logos" src="assets/imagens/logo-instagram.jpg" alt="Instagram"></a>
             
-                <a href="https://twitter.com/KnoxVIIXV" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Twitter"></a>
+                <a href="twitter.html" target="frame"><img class="logos" src="assets/imagens/logo-twitter.jpg" alt="Twitter"></a>
 
-                <a href="https://www.facebook.com/KnoxVIIXV/" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt="Facebook"></a>
+                <a href="facebook.html" target="frame"><img class="logos" src="assets/imagens/logo-facebook.jpg" alt="Facebook"></a>
             </div>
         </section>
     </main>
