--- a/html-css/exercicios/ex025/form001.html
+++ b/html-css/exercicios/ex025/form001.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Meu primeiro formulário</h1>
 
-    <form action="cadastro.js" method="POST">
+    <form action="cadastro.php" method="POST">
         <p><label for="nome">Nome:</label> 
             <input type="text" name="nome" id="nome">
         </p>
